homework/2/assig_3.txt
Operator Precedence

1\2
  File "<ipython-input-39-7992d37700e4>", line 1
    1\2
       ^
SyntaxError: unexpected character after line continuation character


1/2
Out[40]: 0.5

np.int8(1/3)
Out[43]: 0


-5^2 # subtracts 2 from -5
Out[44]: -7

-5**2 multiplies for -5 and 5
Out[45]: -25

(-5) ^ 2 subtracts 2 from -5
Out[46]: -7

(-5) ** 2 squares 5
Out[47]: 25

10-6/2 Order of operations carried out first 6/2 = 3 then 10-3= 7 and makes a float
Out[48]: 7.0

5*4/2*3 Order of operations 20/2 = 10 then 10*3=30
Out[49]: 30.0
